--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-hmac = "0.12.1"
+hmac = "0.12"
+url = { version = "2", optional = true }
 
 [dev-dependencies]
-sha1 = "0.10.5"
-sha2 = "0.10.6"
+sha1 = "0.10"
+sha2 = "0.10"
